update openapi.yml
